generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum AuthProvider {
  LOCAL
  GOOGLE
  APPLE
}

enum SubscriptionPlan {
  FREE
  PRO
  BUSINESS
}

enum SubscriptionStatus {
  ACTIVE
  CANCELED
  EXPIRED
}

enum PostType {
  RANK
  SURVEY
}

enum PostVisibility {
  PUBLIC
  UNLISTED
  PRIVATE
}

enum TierListVisibility {
  PUBLIC
  UNLISTED
  PRIVATE
}

enum SurveyType {
  THESIS
  GROUP_WORK
  COMPETITIVE
  CORPORATE_AD
}

enum SurveyQuestionType {
  SINGLE_CHOICE
  MULTI_CHOICE
  FREE_TEXT
}

enum LeaderboardPeriod {
  DAILY
  WEEKLY
  ALL_TIME
}

model User {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now()) @db.Timestamptz(6)
  updatedAt DateTime @updatedAt @db.Timestamptz(6)

  auth         UserAuth?
  profile      UserProfile?
  stats        UserStats?
  subscriptions Subscription[]

  posts         Post[]
  comments      Comment[]
  likes         PostLike[]
  shares        PostShare[]
  pinnedPosts   PinnedPost[]
  surveyResponses SurveyResponse[]

  following Follow[] @relation("Following")
  followers Follow[] @relation("Followers")
}

model UserAuth {
  id           String       @id @default(cuid())
  userId       String       @unique
  provider     AuthProvider
  email        String?      @unique
  passwordHash String?
  providerSub  String?

  createdAt DateTime @default(now()) @db.Timestamptz(6)
  updatedAt DateTime @updatedAt @db.Timestamptz(6)

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([provider, providerSub])
}

model UserProfile {
  id          String  @id @default(cuid())
  userId      String  @unique
  username    String  @unique
  displayName String?
  bio         String?
  avatarUrl   String?

  // Subscription-gated customization fields (kept nullable)
  themeColor String?

  createdAt DateTime @default(now()) @db.Timestamptz(6)
  updatedAt DateTime @updatedAt @db.Timestamptz(6)

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model UserStats {
  id         String @id @default(cuid())
  userId     String @unique
  ranksCreatedCount Int @default(0)
  followersCount    Int @default(0)
  followingCount    Int @default(0)

  updatedAt DateTime @updatedAt @db.Timestamptz(6)

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model Subscription {
  id        String             @id @default(cuid())
  userId    String
  plan      SubscriptionPlan   @default(FREE)
  status    SubscriptionStatus @default(ACTIVE)
  startedAt DateTime           @default(now()) @db.Timestamptz(6)
  endedAt   DateTime?          @db.Timestamptz(6)

  // Optional billing provider references (Stripe, AppStore, etc.)
  provider         String?
  providerCustomer String?
  providerSubId    String?

  createdAt DateTime @default(now()) @db.Timestamptz(6)
  updatedAt DateTime @updatedAt @db.Timestamptz(6)

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, status])
  @@index([provider, providerSubId])
}

model Follow {
  id          String   @id @default(cuid())
  followerId  String
  followingId String
  createdAt   DateTime @default(now()) @db.Timestamptz(6)

  follower  User @relation("Following", fields: [followerId], references: [id], onDelete: Cascade)
  following User @relation("Followers", fields: [followingId], references: [id], onDelete: Cascade)

  @@unique([followerId, followingId])
  @@index([followingId, createdAt])
  @@index([followerId, createdAt])
}

model Category {
  id          String  @id @default(cuid())
  slug        String  @unique
  name        String
  description String?
  icon        String?
  tags        String[] @default([])

  createdAt DateTime @default(now()) @db.Timestamptz(6)
  updatedAt DateTime @updatedAt @db.Timestamptz(6)

  templates TierListTemplate[]
  posts     Post[]
  overallReview CategoryOverallReview?
  leaderboardSnapshots LeaderboardSnapshot[]

  @@index([name])
}

model TierListTemplate {
  id          String            @id @default(cuid())
  categoryId  String
  creatorId   String?
  isMaster    Boolean           @default(false)
  title       String
  description String?
  visibility  TierListVisibility @default(PUBLIC)

  createdAt DateTime @default(now()) @db.Timestamptz(6)
  updatedAt DateTime @updatedAt @db.Timestamptz(6)

  category Category @relation(fields: [categoryId], references: [id], onDelete: Cascade)
  creator  User?    @relation(fields: [creatorId], references: [id], onDelete: SetNull)

  tiers TierDefinition[]
  rankPosts RankPost[]

  @@index([categoryId, isMaster])
  @@index([creatorId, createdAt])
}

model TierDefinition {
  id         String @id @default(cuid())
  templateId String
  key        String
  label      String
  order      Int
  colorHex   String?

  template TierListTemplate @relation(fields: [templateId], references: [id], onDelete: Cascade)

  @@unique([templateId, key])
  @@unique([templateId, order])
  @@index([templateId, order])
}

model Asset {
  id        String  @id @default(cuid())
  url       String
  mimeType  String?
  width     Int?
  height    Int?
  sizeBytes Int?
  sha256    String?

  createdAt DateTime @default(now()) @db.Timestamptz(6)

  rankPosts RankPost[]
}

model Post {
  id          String        @id @default(cuid())
  type        PostType
  visibility  PostVisibility @default(PUBLIC)

  creatorId   String
  categoryId  String

  caption     String?

  createdAt DateTime @default(now()) @db.Timestamptz(6)
  updatedAt DateTime @updatedAt @db.Timestamptz(6)

  creator  User     @relation(fields: [creatorId], references: [id], onDelete: Cascade)
  category Category @relation(fields: [categoryId], references: [id], onDelete: Restrict)

  rank   RankPost?
  survey SurveyPost?

  metrics PostMetrics?
  comments Comment[]
  likes    PostLike[]
  shares   PostShare[]
  pinnedBy PinnedPost[]

  @@index([createdAt])
  @@index([categoryId, createdAt])
  @@index([creatorId, createdAt])
}

model RankPost {
  postId       String @id
  templateId   String
  tierKey      String
  imageAssetId String

  // Optional: what is being ranked (if later you support named items/products)
  subjectTitle String?
  subjectUrl   String?

  post     Post             @relation(fields: [postId], references: [id], onDelete: Cascade)
  template TierListTemplate @relation(fields: [templateId], references: [id], onDelete: Restrict)
  image    Asset            @relation(fields: [imageAssetId], references: [id], onDelete: Restrict)

  @@index([templateId, tierKey])
}

model SurveyPost {
  postId        String    @id
  surveyType    SurveyType
  sponsorOrgId  String?

  // Survey UX metadata
  title         String
  description   String?
  endsAt        DateTime? @db.Timestamptz(6)

  post       Post          @relation(fields: [postId], references: [id], onDelete: Cascade)
  sponsorOrg Organization? @relation(fields: [sponsorOrgId], references: [id], onDelete: SetNull)

  questions  SurveyQuestion[]
  responses  SurveyResponse[]
  campaign   SurveyCampaign?

  @@index([surveyType, endsAt])
  @@index([sponsorOrgId])
}

model SurveyQuestion {
  id           String             @id @default(cuid())
  surveyPostId String
  order        Int
  type         SurveyQuestionType @default(SINGLE_CHOICE)
  prompt       String
  required     Boolean            @default(true)

  createdAt DateTime @default(now()) @db.Timestamptz(6)

  survey  SurveyPost     @relation(fields: [surveyPostId], references: [postId], onDelete: Cascade)
  options SurveyOption[]
  answers SurveyAnswer[]

  @@unique([surveyPostId, order])
  @@index([surveyPostId, order])
}

model SurveyOption {
  id         String @id @default(cuid())
  questionId String
  order      Int
  label      String
  value      String?

  question SurveyQuestion @relation(fields: [questionId], references: [id], onDelete: Cascade)
  answers  SurveyAnswer[]

  @@unique([questionId, order])
  @@index([questionId, order])
}

model SurveyResponse {
  id           String  @id @default(cuid())
  surveyPostId String
  userId       String?
  anonKey      String?

  createdAt DateTime @default(now()) @db.Timestamptz(6)

  survey SurveyPost @relation(fields: [surveyPostId], references: [postId], onDelete: Cascade)
  user   User?      @relation(fields: [userId], references: [id], onDelete: SetNull)

  answers SurveyAnswer[]

  @@index([surveyPostId, createdAt])
  @@index([userId, createdAt])
}

model SurveyAnswer {
  id         String  @id @default(cuid())
  responseId String
  questionId String

  // One of these is used depending on question type
  optionId   String?
  textValue  String?

  response SurveyResponse @relation(fields: [responseId], references: [id], onDelete: Cascade)
  question SurveyQuestion @relation(fields: [questionId], references: [id], onDelete: Cascade)
  option   SurveyOption?  @relation(fields: [optionId], references: [id], onDelete: SetNull)

  @@index([responseId])
  @@index([questionId])
  @@index([optionId])
}

model PostMetrics {
  postId       String @id
  likeCount    Int    @default(0)
  commentCount Int    @default(0)
  shareCount   Int    @default(0)
  hotScore     Float  @default(0)

  updatedAt DateTime @updatedAt @db.Timestamptz(6)

  post Post @relation(fields: [postId], references: [id], onDelete: Cascade)
}

model Comment {
  id        String @id @default(cuid())
  postId    String
  authorId  String
  body      String

  createdAt DateTime @default(now()) @db.Timestamptz(6)
  updatedAt DateTime @updatedAt @db.Timestamptz(6)

  post   Post @relation(fields: [postId], references: [id], onDelete: Cascade)
  author User @relation(fields: [authorId], references: [id], onDelete: Cascade)

  @@index([postId, createdAt])
  @@index([authorId, createdAt])
}

model PostLike {
  id     String @id @default(cuid())
  postId String
  userId String

  createdAt DateTime @default(now()) @db.Timestamptz(6)

  post Post @relation(fields: [postId], references: [id], onDelete: Cascade)
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([postId, userId])
  @@index([userId, createdAt])
  @@index([postId, createdAt])
}

model PostShare {
  id      String @id @default(cuid())
  postId  String
  userId  String
  channel String // e.g. "twitter", "facebook", "copy_link"
  ref     String? // optional external reference id

  createdAt DateTime @default(now()) @db.Timestamptz(6)

  post Post @relation(fields: [postId], references: [id], onDelete: Cascade)
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([postId, createdAt])
  @@index([userId, createdAt])
  @@index([channel, createdAt])
}

model PinnedPost {
  id        String @id @default(cuid())
  userId    String
  postId    String
  order     Int?

  createdAt DateTime @default(now()) @db.Timestamptz(6)

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
  post Post @relation(fields: [postId], references: [id], onDelete: Cascade)

  @@unique([userId, postId])
  @@unique([userId, order])
}

model Organization {
  id          String @id @default(cuid())
  name        String
  website     String?
  createdAt   DateTime @default(now()) @db.Timestamptz(6)
  updatedAt   DateTime @updatedAt @db.Timestamptz(6)

  surveyPosts SurveyPost[]
  campaigns   SurveyCampaign[]
}

model SurveyCampaign {
  id           String   @id @default(cuid())
  surveyPostId String   @unique
  sponsorOrgId String

  startAt DateTime @default(now()) @db.Timestamptz(6)
  endAt   DateTime? @db.Timestamptz(6)

  // Basic budget/pacing fields (extend as needed)
  budgetCents      Int @default(0)
  spentCents       Int @default(0)
  targetImpressions Int?

  // Targeting rules stored as JSON (country, interests, follower thresholds, etc.)
  targeting Json?

  createdAt DateTime @default(now()) @db.Timestamptz(6)
  updatedAt DateTime @updatedAt @db.Timestamptz(6)

  surveyPost SurveyPost    @relation(fields: [surveyPostId], references: [postId], onDelete: Cascade)
  sponsorOrg Organization  @relation(fields: [sponsorOrgId], references: [id], onDelete: Restrict)
  impressions SurveyImpression[]

  @@index([sponsorOrgId, startAt])
  @@index([startAt, endAt])
}

model SurveyImpression {
  id          String  @id @default(cuid())
  campaignId  String
  userId      String?
  feedRequestId String?

  createdAt DateTime @default(now()) @db.Timestamptz(6)

  campaign SurveyCampaign @relation(fields: [campaignId], references: [id], onDelete: Cascade)
  user     User?          @relation(fields: [userId], references: [id], onDelete: SetNull)

  @@index([campaignId, createdAt])
  @@index([userId, createdAt])
}

model CategoryOverallReview {
  id             String @id @default(cuid())
  categoryId     String @unique

  // Weighted average tier score where S=5..D=1 (or derived from template order)
  averageTierScore Float @default(0)
  sampleSize       Int   @default(0)

  // Optional distribution (by tierKey) for quick UI rendering
  tierDistribution Json?

  updatedAt DateTime @updatedAt @db.Timestamptz(6)

  category Category @relation(fields: [categoryId], references: [id], onDelete: Cascade)
}

model LeaderboardSnapshot {
  id         String            @id @default(cuid())
  categoryId String
  period     LeaderboardPeriod
  computedAt DateTime @default(now()) @db.Timestamptz(6)

  category Category @relation(fields: [categoryId], references: [id], onDelete: Cascade)
  entries  LeaderboardEntry[]

  @@index([categoryId, period, computedAt])
}

model LeaderboardEntry {
  id         String @id @default(cuid())
  snapshotId String
  userId     String
  score      Float
  rank       Int

  snapshot LeaderboardSnapshot @relation(fields: [snapshotId], references: [id], onDelete: Cascade)
  user     User               @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([snapshotId, rank])
  @@unique([snapshotId, userId])
  @@index([userId, score])
}

model DataMarketAggregate {
  id String @id @default(cuid())

  // Aggregated by time bucket + category (no user identifiers)
  bucketStart DateTime @db.Timestamptz(6)
  bucketEnd   DateTime @db.Timestamptz(6)
  categoryId  String

  // Example metrics; extend with more dimensions later
  sampleSize       Int   @default(0)
  averageTierScore Float @default(0)
  tierDistribution Json?

  createdAt DateTime @default(now()) @db.Timestamptz(6)

  category Category @relation(fields: [categoryId], references: [id], onDelete: Cascade)

  @@unique([bucketStart, bucketEnd, categoryId])
  @@index([categoryId, bucketStart])
}

